fix: remove deprecated methods